[package]
name = "unsafe-to-verified"
version = "1.0.2"
authors = ["lurkny <brody@larson.dev>"]
description = "Renames unsafe to verified (kinda)"
license = "MIT"
repository = "https://github.com/lurkny/verified"
keywords = ["unsafe", "proc_macro", "procmacro"]
categories = ["development-tools"]
edition = "2024"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }

